public/styles.css
/* ... */
.text-center {
    text-align: center;
}

.font-body1,
body {
    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
}

.font-body2 {
    font-size: 12px;
    line-height: 18px;
}

a {
    text-decoration: none;
    color: currentColor;
    cursor: pointer;
}

hr {
    background-color: white;
}

x-noscript {
    background: var(--primary-color);
    color: white;
    z-index: 2;
}


/* Icons */

.icon {
    width: var(--icon-size);
    height: var(--icon-size);
    fill: currentColor;
}



/* Shadows */

[shadow="1"] {
    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
        0 1px 8px 0 rgba(0, 0, 0, 0.12),
        0 3px 3px -2px rgba(0, 0, 0, 0.4);
}

[shadow="2"] {
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
        0 1px 10px 0 rgba(0, 0, 0, 0.12),
        0 2px 4px -1px rgba(0, 0, 0, 0.4);
}




/* Animations */

@keyframes fade-in {
    0% {
        opacity: 0;
    }
}

/* Main Header */

body>header a {
    margin-left: 8px;
}

/* Peers List */

x-peers {
    width: 100%;
    overflow: hidden;
    flex-flow: row wrap;
    z-index: 2;
    transition: color 300ms;
}

/* Empty Peers List */

x-no-peers {
    height: 114px;
    padding: 8px;
    text-align: center;
    /* prevent flickering on load */
    animation: fade-in 300ms;
    animation-delay: 500ms;
    animation-fill-mode: backwards;
}

x-no-peers h2,
x-no-peers a {
    color: var(--primary-color);
    margin-bottom: 5px;
}

x-peers:not(:empty)+x-no-peers {
    display: none;
}

x-no-peers::before {
    color: var(--primary-color);
    font-size: 24px;
    font-weight: 400;
    letter-spacing: -.012em;
    line-height: 32px;
}

x-no-peers[drop-bg]::before {
    content: "Release to select recipient";
}

x-no-peers[drop-bg] * {
    display: none;
}



/* Peer */

x-peer {
    -webkit-user-select: none;
    user-select: none;
}

x-peer label {
    width: var(--peer-width);
    padding: 8px;
    cursor: pointer;
    touch-action: manipulation;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    position: relative;
}

x-peer .name {
    width: var(--peer-width);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: center;
}

input[type="file"] {
    visibility: hidden;
    position: absolute;
}

x-peer x-icon {
    --icon-size: 40px;
    width: var(--icon-size);
    padding: 12px;
    border-radius: 50%;
    background: var(--primary-color);
    color: white;
    display: flex;
    margin-bottom: 8px;
    transition: transform 150ms;
    will-change: transform;
}

x-peer:not(.type-ip) x-icon {
    background: var(--paired-device-color);
}

x-peer:not([status]):hover x-icon,
x-peer:not([status]):focus x-icon {
    transform: scale(1.05);
}

x-peer[status] x-icon {
    box-shadow: none;
    opacity: 0.8;
    transform: scale(1);
}

.status,
.device-name {
    height: 18px;
    opacity: 0.7;
}

.device-name {
    font-size: 14px;
    white-space: nowrap;
}

x-peer[status=transfer] .status:before {
    content: 'Transferring...';
}

x-peer[status=prepare] .status:before {
    content: 'Preparing...';
}

x-peer[status=wait] .status:before {
    content: 'Waiting...';
}

x-peer[status=process] .status:before {
    content: 'Processing...';
}

x-peer:not([status]) .status,
x-peer[status] .device-name {
    display: none;
}

x-peer[status] {
    pointer-events: none;
}

x-peer x-icon {
    animation: pop 600ms ease-out 1;
}

@keyframes pop {
    0% {
        transform: scale(0.7);
    }

    40% {
        transform: scale(1.2);
    }
}

x-peer[drop] x-icon {
    transform: scale(1.1);
}



/* Footer */

footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    align-items: center;
    padding: 0 0 16px 0;
    text-align: center;
    transition: color 300ms;
}

footer .logo {
    --icon-size: 80px;
    margin-bottom: 8px;
    color: var(--primary-color);
}

footer .font-body2 {
    color: var(--primary-color);
    text-underline-position: under;
    margin: auto 18px;
}

#on-this-network {
    text-decoration: underline solid var(--primary-color) 4px;
}

#paired-devices {
    text-decoration: underline solid var(--paired-device-color) 4px;
}

/* Dialog */

x-dialog x-background {
    background: rgba(0, 0, 0, 0.61);
    z-index: 10;
    transition: opacity 300ms;
    will-change: opacity;
    padding: 35px;
}

x-dialog x-paper {
    z-index: 3;
    background: white;
    border-radius: 8px;
    padding: 16px 24px;
    width: 100%;
    max-width: 400px;
    box-sizing: border-box;
    transition: transform 300ms;
    will-change: transform;
}

x-dialog:not([show]) {
    pointer-events: none;
}

x-dialog:not([show]) x-paper {
    transform: scale(0.1);
}

x-dialog:not([show]) x-background {
    opacity: 0;
}

x-dialog .row-reverse>.button {
    margin-top: 0;
    margin-bottom: -16px;
    width: 50%;
    height: 50px;
}

x-dialog a {
    color: var(--primary-color);
}

x-dialog .font-subheading {
    margin-bottom: 5px;
}

/* PairDevicesDialog */

#keyInputContainer {
    width: 100%;
    display: flex;
    justify-content: center;
}

#keyInputContainer>input {
    width: 45px;
    height: 45px;
    font-size: 30px;
    padding: 0;
    text-align: center;
    display: -webkit-box !important;
    display: -webkit-flex !important;
    display: -moz-flex !important;
    display: -ms-flexbox !important;
    display: flex !important;
    -webkit-justify-content: center;
    -ms-justify-content: center;
    justify-content: center;
}

#keyInputContainer>input + * {
    margin-left: 6px;
}

#keyInputContainer>input:nth-of-type(4) {
    margin-left: 18px;
}

#roomKey {
    font-size: 50px;
    letter-spacing: min(calc((100vw - 80px - 99px) / 100 * 7), 23px);
    display: inline-block;
    text-indent: calc(0.5 * (11px + min(calc((100vw - 80px - 99px) / 100 * 6), 23px)));
    margin: 15px -15px;
}

#roomKeyQrCode {
    padding: inherit;
    margin: auto;
    width: 80px;
    height: 80px;
}

#pairDeviceDialog hr {
    margin-top: 40px;
    margin-bottom: 40px;
}
/* ... */

